<resources>
    <string name="app_name">Calculator</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="input_0">0</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="input_9">9</string>
    <string name="input_8">8</string>
    <string name="input_7">7</string>
    <string name="multiply">×</string>
    <string name="input_6">6</string>
    <string name="input_5">5</string>
    <string name="input_4">4</string>
    <string name="divide">÷</string>
    <string name="input_3">3</string>
    <string name="input_2">2</string>
    <string name="input_1">1</string>
    <string name="xn">X^n</string>
    <string name="m">M</string>
    <string name="ce">⌫</string>
    <string name="c">C</string>
</resources>
